--- a/css/console.css
+++ b/css/console.css
@@ -7,26 +7,22 @@
   }
   
   html {
-    background-color: white;
-    background-image: none;
-    font-family: sans-serif;
+    background-image: url(/assets/1.jpg);
     /* zoom: 130%; */
   }
   
-  
   h1 {
     font-size: 40px;
-    color: #293947;
-    font-weight: lighter;
-    font-family: 'Louis George Cafe';
+    color: whitesmoke;
+    font-family: monospace;
   }
 
   h1::after {
-    content: '';
+    content: '>';
   }
 
   h1::before {
-    content: '';
+    content: '<';
   }
   
   /* 3*3 Grid */
@@ -46,13 +42,15 @@
     margin: -12px 2px 2px 2px;
     font-size: 30px;
     text-align: center;
-    background-color: gray;
+    background-color: whitesmoke;
     cursor: pointer;
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Louis George Cafe';
-    color: whitesmoke;
+    font-family: "Lato", sans-serif;
+    color: black;
+    font-family: monospace;
   }
+
   
   #b1:hover,
   #b2:hover,
@@ -84,8 +82,8 @@
     border: none;
     width: 240px;
     height: 40px;
-    font-family: 'Louis George Cafe';
-    background-color: dodgerblue;
+    font-family: monospace;
+    background-color: rgb(36, 36, 36);
     color: white;
     font-size: 20px;
     cursor: pointer;
@@ -93,11 +91,11 @@
   }
 
   #but::after, #but-theme::after {
-    content: '';
+    content: '>';
   }
 
   #but::before, #but-theme::before {
-    content: '';
+    content: '<';
   }
   
   #but:nth-child(2) {
@@ -106,15 +104,15 @@
   
   #but:hover,
   #but-theme:hover {
-    background-color: #2dbdf9;
+    background-color: rgb(51, 51, 51);
   }
   
   /* Player turn space */
   #plr1,
   #plr2 {
-    font-family: 'Louis George Cafe';
+    font-family: monospace;
     color: whitesmoke;
-    font-size: 20px;
+    font-size: 18px;
     width: 100px;
     height: 40px;
     margin: 0 20px 0 20px;
@@ -133,7 +131,7 @@
   }
   
   #trn {
-    font-family: 'Louis George Cafe';
+    font-family: monospace;
     color: whitesmoke;
     font-size: 20px;
     width: 240px;
@@ -165,9 +163,8 @@
   }
   
   #credits {
-    color: #595457;
+    color: white;
     margin-top: 20px;
-    font-family: 'Louis George Cafe';
   }
   
   #overlay {
