--- a/css/paper.css
+++ b/css/paper.css
@@ -7,8 +7,7 @@
   }
   
   html {
-    background-color: white;
-    background-image: none;
+    background-image: url(/assets/2833289.jpg);
     font-family: sans-serif;
     /* zoom: 130%; */
   }
@@ -16,9 +15,8 @@
   
   h1 {
     font-size: 40px;
-    color: #293947;
-    font-weight: lighter;
-    font-family: 'Louis George Cafe';
+    color: rgb(36, 36, 36);
+    font-family: 'Asteratty';
   }
 
   h1::after {
@@ -46,12 +44,13 @@
     margin: -12px 2px 2px 2px;
     font-size: 30px;
     text-align: center;
-    background-color: gray;
+    background-color: rgb(36, 36, 36);
     cursor: pointer;
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Louis George Cafe';
+    font-family: "Lato", sans-serif;
     color: whitesmoke;
+    font-family: 'Asteratty';
   }
   
   #b1:hover,
@@ -84,8 +83,8 @@
     border: none;
     width: 240px;
     height: 40px;
-    font-family: 'Louis George Cafe';
-    background-color: dodgerblue;
+    font-family: 'Asteratty';
+    background-color: rgb(36, 36, 36);
     color: white;
     font-size: 20px;
     cursor: pointer;
@@ -106,13 +105,13 @@
   
   #but:hover,
   #but-theme:hover {
-    background-color: #2dbdf9;
+    background-color: rgb(51, 51, 51);
   }
   
   /* Player turn space */
   #plr1,
   #plr2 {
-    font-family: 'Louis George Cafe';
+    font-family: 'Asteratty';
     color: whitesmoke;
     font-size: 20px;
     width: 100px;
@@ -133,7 +132,7 @@
   }
   
   #trn {
-    font-family: 'Louis George Cafe';
+    font-family: 'Asteratty';
     color: whitesmoke;
     font-size: 20px;
     width: 240px;
@@ -165,9 +164,9 @@
   }
   
   #credits {
-    color: #595457;
+    color: white;
     margin-top: 20px;
-    font-family: 'Louis George Cafe';
+    color: rgb(36, 36, 36);;
   }
   
   #overlay {
