fonts fixed (maybe)

--- a/css/paper.css
+++ b/css/paper.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: "Asteratty";
-    src: url("/assets/Asteratty.ttf");
+    src: url("/css/assets/Asteratty.ttf");
   }
   
   html {
