--- a/css/light.css
+++ b/css/light.css
@@ -224,7 +224,7 @@
   #bnw {
     color: rgb(107, 107, 107);
     font-family: "Asteratty";
-    background-image: url("/assets/NSwitch_PaperMarioTheOrigamiKing_Overview_Beautiful_Headline_PaperBG.jpg");
+    background-image: url("/assets/images/NSwitch_PaperMarioTheOrigamiKing_Overview_Beautiful_Headline_PaperBG.jpg");
     background-size: cover;
     height: 50px;
     display: flex;
@@ -234,7 +234,7 @@
   #cnsl {
     color: white;
     font-family: monospace;
-    background-image: url("/assets/1.jpg");
+    background-image: url("/assets/images/console.jpg");
     background-size: cover;
     height: 50px;
     display: flex;
