--- a/css/paper.css
+++ b/css/paper.css
@@ -3,11 +3,11 @@
 
 @font-face {
     font-family: "Asteratty";
-    src: url("/css/assets/Asteratty.ttf");
+    src: url("/assets/fonts/Asteratty.ttf");
   }
   
   html {
-    background-image: url(/assets/2833289.jpg);
+    background-image: url(/assets/images/paper.jpg);
     font-family: sans-serif;
     /* zoom: 130%; */
   }
@@ -223,7 +223,7 @@
   #bnw {
     color: rgb(107, 107, 107);
     font-family: "Asteratty";
-    background-image: url("/assets/NSwitch_PaperMarioTheOrigamiKing_Overview_Beautiful_Headline_PaperBG.jpg");
+    background-image: url("/assets/images/NSwitch_PaperMarioTheOrigamiKing_Overview_Beautiful_Headline_PaperBG.jpg");
     background-size: cover;
     height: 50px;
     display: flex;
@@ -233,7 +233,7 @@
   #cnsl {
     color: white;
     font-family: monospace;
-    background-image: url("/assets/1.jpg");
+    background-image: url("/assets/images/console.jpg");
     background-size: cover;
     height: 50px;
     display: flex;
